@@ -20,14 +20,14 @@ public class QuasiDescriptor {
     }
 
     public String getSymbol() {
-        if (real instanceof StepDescriptor) {
-            return ((StepDescriptor) real).getFunctionName();
+        if (real instanceof StepDescriptor descriptor) {
+            return descriptor.getFunctionName();
         } else {
             Set<String> symbolValues = SymbolLookup.getSymbolValue(real);
             if (!symbolValues.isEmpty()) {
                 return symbolValues.iterator().next();
             } else if (parent != null) {
-                return String.format("%s([$class: '%s'])", parent.getFunctionName(), real.clazz.getSimpleName());
+                return "%s([$class: '%s'])".formatted(parent.getFunctionName(), real.clazz.getSimpleName());
             } else {
                 throw new AssertionError("Symbol present but no values defined.");
             }
